adding about page

--- a/HelpPage.html
+++ b/HelpPage.html
@@ -6,11 +6,10 @@
     </head>
 
     <body>
-      <!-- Header Section -->
-      <header id="bar">
-        <h1>Welcome to RecipeMe!</h1>
-      </header>
-  
+        <!-- Header Section -->
+        <header id="main-header">
+            <h1>RecipeMe</h1>
+        </header>
       <!-- Navigaiton Section -->
       <nav id="main-nav">
         <ul>
@@ -20,6 +19,8 @@
           <li><a href="FavoritesPage.html">Favorites</a></li>
         </ul>
       </nav>
+
+      <h1 id="sub-header">Help Page</h1>
 
     </body>
 </html>
