--- a/HomePage.html
+++ b/HomePage.html
@@ -6,14 +6,22 @@
     </head>
 
     <body>
+        <!-- Header Section -->
+        <header id="main-header">
+            <h1>RecipeMe</h1>
+        </header>
+        <!-- Navigation Section -->
       <nav id="main-nav">
         <ul>
           <li><a href="HomePage.html">Home</a></li>
+          <li><a href="AboutPage.html">About</a></li>
           <li><a href="HelpPage.html">Help</a></li>
           <li><a href="SearchPage.html">Search</a></li>
           <li><a href="FavoritesPage.html">Favorites</a></li>
         </ul>
       </nav>
+
+      <h1 id="sub-header">Welcome to RecipeMe!</h1>
 
     </body>
 </html>
