--- a/SearchPage.html
+++ b/SearchPage.html
@@ -6,11 +6,11 @@
     </head>
 
     <body>
-      <!-- Header Section -->
-      <header id="bar">
-        <h1>Welcome to RecipeMe!</h1>
-      </header>
-  
+
+        <!-- Header Section -->
+        <header id="main-header">
+            <h1>RecipeMe</h1>
+        </header>
       <!-- Navigaiton Section -->
       <nav id="main-nav">
         <ul>
