--- a/HelpPage.html
+++ b/HelpPage.html
@@ -14,6 +14,7 @@
       <nav id="main-nav">
         <ul>
           <li><a href="HomePage.html">Home</a></li>
+          <li><a href="AboutPage.html">About</a></li>
           <li><a href="HelpPage.html">Help</a></li>
           <li><a href="SearchPage.html">Search</a></li>
           <li><a href="FavoritesPage.html">Favorites</a></li>
