--- a/SearchPage.html
+++ b/SearchPage.html
@@ -6,7 +6,6 @@
     </head>
 
     <body>
-
         <!-- Header Section -->
         <header id="main-header">
             <h1>RecipeMe</h1>
@@ -15,6 +14,7 @@
       <nav id="main-nav">
         <ul>
           <li><a href="HomePage.html">Home</a></li>
+          <li><a href="AboutPage.html">About</a></li>
           <li><a href="HelpPage.html">Help</a></li>
           <li><a href="SearchPage.html">Search</a></li>
           <li><a href="FavoritesPage.html">Favorites</a></li>
