--- a/AboutPage.html
+++ b/AboutPage.html
@@ -7,11 +7,11 @@
 
     <body>
         <!-- Header Section -->
-        <header id="main-header">
+        <header class="main-header">
             <h1>RecipeMe</h1>
         </header>
       <!-- Navigaiton Section -->
-      <nav id="main-nav">
+      <nav class="main-nav">
         <ul>
           <li><a href="HomePage.html">Home</a></li>
           <li><a href="AboutPage.html">About</a></li>
@@ -21,7 +21,21 @@
         </ul>
       </nav>
 
-      <h1 id="sub-header">About Page</h1>
+      <h1 class="sub-header">About Page</h1>
 
+      <h1 class ="sub-header2">Meet the creators!</h1>
+      <div class="creators">
+        <figure>
+          <img src="images/hannah.jpg" alt="Hannah Richard" />
+          <figcaption>Hannah Richard</figcaption>
+        </figure>
+        <figure>
+          <img src="images/jillian.jpg" alt="Jillian Conway" />
+          <figcaption>Jillian Conway</figcaption>
+        </figure>
+      </div>
+      <h2 class = "sub-header2">Founded in 2025</h2>
+      <p id = "about-text">As college students at the University of Maryland, Hannah Richard and Jillian Conway know the difficulties that come from trying to find easy meals while staying healthy and on a budget.
+        RecipeMe was born out of that challenge—to help students find easy, healthy recipes quickly.</p>
     </body>
 </html>
