--- a/FavoritesPage.html
+++ b/FavoritesPage.html
@@ -7,12 +7,12 @@
 
     <body>
         <!-- Header Section -->
-        <header id="main-header">
+        <header class="main-header">
             <h1>RecipeMe</h1>
         </header>
   
       <!-- Navigaiton Section -->
-      <nav id="main-nav">
+      <nav class="main-nav">
         <ul>
           <li><a href="HomePage.html">Home</a></li>
           <li><a href="AboutPage.html">About</a></li>
