--- a/HomePage.html
+++ b/HomePage.html
@@ -7,11 +7,11 @@
 
     <body>
         <!-- Header Section -->
-        <header id="main-header">
+        <header class="main-header">
             <h1>RecipeMe</h1>
         </header>
         <!-- Navigation Section -->
-      <nav id="main-nav">
+      <nav class="main-nav">
         <ul>
           <li><a href="HomePage.html">Home</a></li>
           <li><a href="AboutPage.html">About</a></li>
@@ -21,7 +21,7 @@
         </ul>
       </nav>
 
-      <h1 id="sub-header">Welcome to RecipeMe!</h1>
+      <h1 class="sub-header">Welcome to RecipeMe!</h1>
 
     </body>
 </html>
