--- a/AboutPage.html
+++ b/AboutPage.html
@@ -3,6 +3,7 @@
     <head>
       <title>RecipeMe</title>
       <link rel="stylesheet" href="INST377Final-style.css" />
+      <script src="INST377Final-javascript.js"></script>
     </head>
 
     <body>
