--- a/HomePage.html
+++ b/HomePage.html
@@ -3,6 +3,7 @@
     <head>
       <title>RecipeMe</title>
       <link rel="stylesheet" href="INST377Final-style.css" />
+      <script type="module" src="INST377Final-javascript.js"></script>
     </head>
 
     <body>
@@ -22,6 +23,11 @@
       </nav>
 
       <h1 class="sub-header">Welcome to RecipeMe!</h1>
+
+      <div id="featured-recipes" class="recipe-container">
+        <h2>Featured Recipes</h2>
+        <div id="recipes-list"></div>
+      </div>
 
     </body>
 </html>
