updates to search page

--- a/HomePage.html
+++ b/HomePage.html
@@ -3,7 +3,7 @@
     <head>
       <title>RecipeMe</title>
       <link rel="stylesheet" href="INST377Final-style.css" />
-      <script type="module" src="INST377Final-javascript.js"></script>
+      <script type="module" src="Home-javascript.js"></script>
     </head>
 
     <body>
