fixing layout of search page

--- a/HomePage.html
+++ b/HomePage.html
@@ -26,7 +26,7 @@
 
       <div id="featured-recipes" class="recipe-container">
         <h2>Featured Recipes</h2>
-        <div id="recipes-list"></div>
+        <div id="random-recipes" class="recipes-list"></div>
       </div>
 
     </body>
