--- a/SearchPage.html
+++ b/SearchPage.html
@@ -22,13 +22,24 @@
         </ul>
       </nav>
 
-      <main>
+      <!-- <main>
         <section class="search-section">
           <h2>Search Recipes by Ingredients</h2>
           <input type="text" id="ingredientInput" placeholder="e.g., eggs, milk, cheese" />
           <button id="searchBtn">Search</button>
-          <!-- <div id="results" class="results-grid"></div> -->
           <div id="results" class="results-list"></div>
+        </section>
+      </main> -->
+
+      <main>
+        <section class="search-section">
+          <div class="recipe-container">
+            <h2>Search Recipes by Ingredients</h2>
+            <input type="text" id="ingredientInput" placeholder="e.g., eggs, milk, cheese" />
+            <button id = "searchBtn" class="button-10" role="button">Search</button>
+            <!-- <div id="results" class="results-grid"></div> -->
+            <div id="results" class="recipes-list"></div>
+          </div>
         </section>
       </main>
 
