new javascript file

--- a/AboutPage.html
+++ b/AboutPage.html
@@ -1,7 +1,7 @@
 <!-- About Page -->
 <html>
     <head>
-      <title>RecipeMe</title>
+      <title>RecipeMe - About</title>
       <link rel="stylesheet" href="INST377Final-style.css" />
       <script src="INST377Final-javascript.js"></script>
     </head>
