--- a/FavoritesPage.html
+++ b/FavoritesPage.html
@@ -1,7 +1,7 @@
 <!-- Favorites Page -->
 <html>
     <head>
-      <title>RecipeMe</title>
+      <title>RecipeMe - Favorites</title>
       <link rel="stylesheet" href="INST377Final-style.css" />
       <script src="INST377Final-javascript.js"></script>
     </head>
