--- a/HomePage.html
+++ b/HomePage.html
@@ -1,7 +1,7 @@
 <!-- Home Page -->
 <html>
     <head>
-      <title>RecipeMe</title>
+      <title>RecipeMe - Home </title>
       <link rel="stylesheet" href="INST377Final-style.css" />
       <script type="module" src="Home-javascript.js"></script>
     </head>
