--- a/SearchPage.html
+++ b/SearchPage.html
@@ -1,7 +1,7 @@
 <!-- Search Page -->
 <html>
     <head>
-      <title>RecipeMe</title>
+      <title>RecipeMe - Search</title>
       <link rel="stylesheet" href="INST377Final-style.css" />
       <script type= "module" src="Search-javascript.js"></script>
     </head>
