added slider in help page, still needs edits

--- a/HelpPage.html
+++ b/HelpPage.html
@@ -31,38 +31,37 @@
 
     <h1 class="sub-header">Help Page</h1>
     <h2 class="sub-header2">How to use RecipeMe</h2>
-
-    <!-- Image Slider -->
-    <!-- <div class="swiper mySwiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="images/help_images/" alt="Step 1: Enter Ingredients" /></div>
-        <div class="swiper-slide"><img src="images/help_images/step2.png" alt="Step 2: View Results" /></div>
-        <div class="swiper-slide"><img src="images/help_images/" alt="Step 3: Click Recipe" /></div>
-        <div class="swiper-slide"><img src="images/help_images/" alt="Step 4: Save Favorite" /></div>
-      </div>
-      <div class="swiper-pagination"></div>
-    </div> -->
-    <!-- Simple Slider Container -->
     <div id="carousel" class="simple-slider">
       <div>
-        <h3>Step 1: Enter Ingredients</h3>
-        <img
-          src="images/help_images/step1.png"
-          alt="Step 1: Enter Ingredients"
-        />
+        <figure>
+          <img src="images/help_images/step1.JPG" alt="Step 1: Enter Ingredients" />
+          <figcaption>Step 1: Enter Ingredients</figcaption>
+        </figure>
       </div>
       <div>
-        <h3>Step 2: View Results</h3>
-        <img src="images/help_images/step2.png" alt="Step 2: View Results" />
+        <figure>
+          <img src="images/help_images/step2.JPG" alt="Step 2: View Results" />
+          <figcaption>Step 2: View Results</figcaption>
+        </figure>
       </div>
       <div>
-        <h3>Step 3: Click Recipe</h3>
-        <img src="images/help_images/step3.png" alt="Step 3: Click Recipe" />
+        <figure>
+          <img src="images/help_images/step3.JPG" alt="Step 3: Click Recipe" />
+          <figcaption>Step 3: Click Recipe</figcaption>
+        </figure>
       </div>
       <div>
-        <h3>Step 4: Save Favorite</h3>
-        <img src="images/help_images/step4.png" alt="Step 4: Save Favorite" />
+        <figure>
+          <img src="images/help_images/step4.JPG" alt="Step 4: Save Favorite" />
+          <figcaption>Step 4: Save Favorite</figcaption>
+        </figure>
       </div>
+    </div>
+    
+
+    <div class="carousel-controls">
+      <button id="prevBtn">←</button>
+      <button id="nextBtn">→</button>
     </div>
   </body>
 </html>
