fixing help page

--- a/HelpPage.html
+++ b/HelpPage.html
@@ -60,8 +60,8 @@
     
 
     <div class="carousel-controls">
-      <button id="prevBtn">←</button>
-      <button id="nextBtn">→</button>
+      <button id="prevBtn" class="button-34" role="button">←</button>
+      <button id="nextBtn" class="button-34" role="button">→</button>
     </div>
   </body>
 </html>
