substitute page updates

--- a/SearchPage.html
+++ b/SearchPage.html
@@ -19,23 +19,16 @@
           <li><a href="HelpPage.html">Help</a></li>
           <li><a href="SearchPage.html">Search</a></li>
           <li><a href="FavoritesPage.html">Favorites</a></li>
+          <li><a href="SubstitutesPage.html">Substitutes</a></li>
         </ul>
       </nav>
-
-      <!-- <main>
-        <section class="search-section">
-          <h2>Search Recipes by Ingredients</h2>
-          <input type="text" id="ingredientInput" placeholder="e.g., eggs, milk, cheese" />
-          <button id="searchBtn">Search</button>
-          <div id="results" class="results-list"></div>
-        </section>
-      </main> -->
 
       <main>
         <section class="search-section">
           <div class="recipe-container">
             <h2>Search Recipes by Ingredients</h2>
             <input type="text" id="ingredientInput" placeholder="e.g., eggs, milk, cheese" />
+            <p>Separate ingredients by a comma.</p>
             <button id = "searchBtn" class="button-10" role="button">Search</button>
             <!-- <div id="results" class="results-grid"></div> -->
             <div id="results" class="recipes-list"></div>
