--- a/HelpPage.html
+++ b/HelpPage.html
@@ -26,6 +26,7 @@
         <li><a href="HelpPage.html">Help</a></li>
         <li><a href="SearchPage.html">Search</a></li>
         <li><a href="FavoritesPage.html">Favorites</a></li>
+        <li><a href="SubstitutesPage.html">Substitutes</a></li>
       </ul>
     </nav>
 
