--- a/HelpPage.html
+++ b/HelpPage.html
@@ -57,6 +57,24 @@
           <figcaption>Step 4: Save Favorite</figcaption>
         </figure>
       </div>
+      <!-- Uncomment this when we get the images for the other slides -->
+      <!-- <div>
+        <figure>
+          <img src="images/help_images/step5.JPG" alt="Step 5: View Favorites" />
+          <figcaption>Step 5: View Favorites</figcaption>
+        </figure>
+      </div>
+      <div>
+        <figure>
+          <img src="images/help_images/step6.JPG" alt="Step 6: Enter Substitutes" />
+          <figcaption>Step 6: View Substitutes</figcaption>
+        </figure>
+      </div>
+      <div>
+        <figure>
+          <img src="images/help_images/step7.JPG" alt="Step 7: View Substitutes" />
+          <figcaption>Step 7: View Substitutes</figcaption>
+        </figure> -->
     </div>
     
 
