--- a/SubstitutesPage.html
+++ b/SubstitutesPage.html
@@ -2,6 +2,14 @@
     <head>
       <title>RecipeMe - Substitues </title>
       <link rel="stylesheet" href="INST377Final-style.css" />
+        <!-- Grid.js CSS -->
+      <link
+        href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css"
+        rel="stylesheet"
+      />
+
+      <!-- Grid.js JS -->
+      <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js"></script>
       <script type="module" src="Substitutes-javascript.js"></script>
     </head>
 
@@ -25,6 +33,6 @@
       <h2 class="sub-header">Search for Substitutes for Common Ingredients</h2>
       <input type="text" id="ingredientInput" placeholder="e.g. butter" />
       <button id="findSubstitutesBtn">Search</button>
-      <div id="substituteResults"></div>
+      <div id="substituteResults" style="padding: 20px;"></div>
     </body>
 </html>
