--- a/HelpPage.html
+++ b/HelpPage.html
@@ -58,7 +58,7 @@
         </figure>
       </div>
       <!-- Uncomment this when we get the images for the other slides -->
-      <!-- <div>
+      <div>
         <figure>
           <img src="images/help_images/step5.JPG" alt="Step 5: View Favorites" />
           <figcaption>Step 5: View Favorites</figcaption>
@@ -74,7 +74,7 @@
         <figure>
           <img src="images/help_images/step7.JPG" alt="Step 7: View Substitutes" />
           <figcaption>Step 7: View Substitutes</figcaption>
-        </figure> -->
+        </figure>
     </div>
     
 
