--- a/public/HelpPage.html
+++ b/public/HelpPage.html
@@ -75,6 +75,7 @@
           <img src="images/help_images/step7.JPG" alt="Step 7: View Substitutes" />
           <figcaption>Step 7: View Substitutes</figcaption>
         </figure>
+      </div>
     </div>
     
 
