--- a/public/AboutPage.html
+++ b/public/AboutPage.html
@@ -28,7 +28,7 @@
       <h1 class ="sub-header2">Meet the creators!</h1>
       <div class="creators">
         <figure>
-          <img src="images/jillian.JPG" alt="Jillian Conway" />
+          <img src="images/jillian.jpg" alt="Jillian Conway" />
           <figcaption>Jillian Conway</figcaption>
         </figure>
         <figure>
