--- a/public/AboutPage.html
+++ b/public/AboutPage.html
@@ -3,7 +3,7 @@
     <head>
       <title>RecipeMe - About</title>
       <link rel="stylesheet" href="INST377Final-style.css" />
-      <script src="INST377Final-javascript.js"></script>
+      <!-- <script src="INST377Final-javascript.js"></script> -->
     </head>
 
     <body>
